force-app/main/default/objects/LPCR_RessourceFamille__c/LPCR_RessourceFamille__c.object-meta.xml
<CustomObject>
    <label>Ressource Famille</label>
    <nameField>
        <label>Ressource Famille Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ressources Familles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>