force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_Active__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Active__c</fullName>
    <formula>If (Isblank ( LPCR_DateFin__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>