force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_AnneeRevenu__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AnneeRevenu__c</fullName>
    <label>Année de référence du revenu</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>