force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_BaremeCaf__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BaremeCaf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Barème CAF</label>
    <referenceTo>LPCR_BaremeCAF__c</referenceTo>
    <relationshipLabel>Ressources Familles</relationshipLabel>
    <relationshipName>Ressources_Familles</relationshipName>
    <type>Lookup</type>
</CustomField>