force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_Commentaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>