force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_CompteFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteFamille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Famille</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ressources Familles</relationshipLabel>
    <relationshipName>Ressources_Familles</relationshipName>
    <type>Lookup</type>
</CustomField>