force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_creche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>crèche</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ressources Familles (crèche)</relationshipLabel>
    <relationshipName>Ressources_Familles1</relationshipName>
    <type>Lookup</type>
</CustomField>