force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_DureeContratJour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContratJour__c</fullName>
    <label>Durée du contrat en jour</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>