force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_FinContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FinContrat__c</fullName>
    <label>FinContrat</label>
    <type>Date</type>
</CustomField>