force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_ForfaitMensuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ForfaitMensuel__c</fullName>
    <label>Forfait mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>