force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_IdExterne_CompteFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_CompteFamille__c</fullName>
    <label>Id Externe Compte Famille</label>
    <length>50</length>
    <type>Text</type>
</CustomField>