force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_IdExterne_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Creche__c</fullName>
    <label>Id Externe Creche</label>
    <length>50</length>
    <type>Text</type>
</CustomField>