force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_Indice__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Indice__c</fullName>
    <formula>If ( LPCR_NombreEnfantHandicape__c &gt;0,  ((LPCR_NombreEnfantHandicape__c+LPCR_NombreEnfants__c )+1), LPCR_NombreEnfants__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indice de sélection pour Taux d&#39;effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>