force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_MoyenneHeuresSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MoyenneHeuresSemaine__c</fullName>
    <label>Moyenne d&#39;heures par semaine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>