force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_NombreEnfantHandicape__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreEnfantHandicape__c</fullName>
    <label>Nombre d’enfant(s) handicapé(s)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>