force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_NombreEnfants__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreEnfants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre d’enfants</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>