force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_NombreJoursAccueilSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursAccueilSemaine__c</fullName>
    <label>Nombre de jours d&#39;accueil par semaine</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>