force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_PrixMensuel_del__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixMensuel_del__c</fullName>
    <formula>CASE(  LPCR_Planning__r.LPCR_TypePlanning__c ,
&quot;Planning Classique&quot;, ( LPCR_Planning__r.LPCR_NombreHeuresSemaine__c  *(52 -LPCR_Planning__r.LPCR_CongesSemaine__c  )* LPCR_TauxHoraire__c )/LPCR_TypeMensualisation__c,
&quot;Multi-Planning&quot;, (LPCR_Planning__r.LPCR_MoyenneJoursSemaine__c  *(52 -LPCR_Planning__r.LPCR_CongesSemaine__c  )* LPCR_TauxHoraire__c )/LPCR_TypeMensualisation__c,
&quot;Planning Tournant&quot;, (LPCR_Planning__r.LPCR_NombreHeuresMois__c  * LPCR_TauxHoraire__c),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>