force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_Produit__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ressources Familles</relationshipLabel>
    <relationshipName>Ressources_Familles</relationshipName>
    <type>Lookup</type>
</CustomField>