force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_RessourcesPrixPlancher__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RessourcesPrixPlancher__c</fullName>
    <formula>LPCR_BaremeCaf__r.LPCR_RessourcePlancher__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ressource Prix Plancher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>