force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_SourceDonnees__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SourceDonnees__c</fullName>
    <label>Source des données</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>