force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_StatutValidation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutValidation__c</fullName>
    <label>Statut Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A controller</fullName>
            </value>
            <value>
                <fullName>Controllé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>