force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_TauxHoraire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxHoraire__c</fullName>
    <formula>IF( (LPCR_RevenusFamille__c/12) &gt; LPCR_RessourcePlafond__c, LPCR_RessourcePlafond__c,
IF( (LPCR_RevenusFamille__c/12) &lt; LPCR_RessourcePlafond__c, (LPCR_RevenusFamille__c/12),
IF( (LPCR_RevenusFamille__c/12) &lt; LPCR_RessourcesPrixPlancher__c, LPCR_RessourcesPrixPlancher__c,
IF( (LPCR_RevenusFamille__c/12) &gt; LPCR_RessourcesPrixPlancher__c, (LPCR_RevenusFamille__c/12),
NULL))))* LPCR_TauxEffort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux Horaire</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>