force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_TauxHorairedel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxHorairedel__c</fullName>
    <label>Taux Horaire delete</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>