force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_TypeCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche__c</fullName>
    <formula>Text ( LPCR_Creche__r.LPCR_TypeCreche__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Crèche</label>
    <type>Text</type>
</CustomField>