force-app/main/default/objects/LPCR_RessourceFamille__c/fields/LPCR_TypeMensualisation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeMensualisation__c</fullName>
    <formula>LPCR_creche__r.LPCR_TypeMensualisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Mensualisation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>