force-app/main/default/objects/LPCR_RessourceFamille__c/recordTypes/Mac.recordType-meta.xml
<RecordType>
    <fullName>Mac</fullName>
    <active>true</active>
    <label>Mac</label>
</RecordType>