force-app/main/default/objects/LPCR_RessourceFamille__c/recordTypes/Micro.recordType-meta.xml
<RecordType>
    <fullName>Micro</fullName>
    <active>true</active>
    <label>Micro</label>
</RecordType>