force-app/main/default/objects/LPCR_RessourceFamille__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LPCR_Active__c</columns>
    <columns>LPCR_ContactEnfant__c</columns>
    <columns>LPCR_CompteFamille__c</columns>
    <columns>LPCR_Creche__c</columns>
    <columns>LPCR_TypeCreche__c</columns>
    <columns>LPCR_DateDebut__c</columns>
    <columns>LPCR_DateFin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>